WIP file upload system working, needs filename change

--- a/templates/form.html
+++ b/templates/form.html
@@ -6,10 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-  <form method="post" enctype="multipart/form-data">
+  <form method="post" enctype="multipart/form-data" action="/">
     <div>
       <label for="file">Choose file to upload</label>
-      <input type="file" accept=".jpg" id="file" name="file" />
+      <input type="file" accept=".jpg" id="file" name="file" value="file"/>
     </div>
     <div>
       <button>Submit</button>
